# ElasticReconstruction

./: .gitignore  .gitmodules  CMakeLists.txt  ElasticReconstruction.sln  LICENSE.txt  README.md  pipeline.sh
BuildCorrespondence/: BuildCorrespondence.cpp  BuildCorrespondence.vcxproj  BuildCorrespondence.vcxproj.filters  CMakeLists.txt  CorresApp.cpp  CorresApp.h  ReadMe.txt
FragmentOptimizer/: CMakeLists.txt  FragmentOptimizer.cpp  FragmentOptimizer.vcxproj  HashSparseMatrix.cpp  HashSparseMatrix.h  OptApp.cpp  OptApp.h  PointCloud.cpp  PointCloud.h  RGBDTrajectory.h  ReadMe.txt  tags
GlobalRegistration/: CMakeLists.txt  GlobalRegistration.cpp  MyVoxelGridFilter.cpp  MyVoxelGridFilter.h  PCLStuff.cpp  PCLStuff.h  RansacCurvature.cpp  RansacCurvature.h
GraphOptimizer/: CMakeLists.txt  GraphOptimizer.cpp  OptApp.cpp  OptApp.h  helper.h
GraphOptimizer/vertigo/: edge_se3Switchable.cpp
Integrate/: CMakeLists.txt  ControlGrid.cpp  Integrate.cpp  Integrate.vcxproj  Integrate.vcxproj.filters  IntegrateApp.cpp  IntegrateApp.h  ReadMe.txt  TSDFVolume.cpp  TSDFVolume.h  TSDFVolumeUnit.cpp  TSDFVolumeUnit.h  stdafx.h
